feat: update user service, user controller, user profile,  user form urer api
